fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-132-9a7b0243b6.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Box boxSize="100%">
  <Box />
  <Box />
</Box>"
