fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-133-f425fa006c.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

{
  "name": "Button",
  "node": {
    "children": [],
    "name": "Default",
    "parent": {
      "children": [
        [Circular],
        {
          "children": [],
          "name": "Active",
          "parent": [Circular],
          "reactions": [
            {
              "actions": [],
              "trigger": {
                "type": "ON_PRESS",
              },
            },
          ],
          "type": "COMPONENT",
          "variantProperties": {},
          "visible": true,
        },
      ],
      "componentPropertyDefinitions": {},
      "defaultVariant": [Circular],
      "name": "Button",
      "type": "COMPONENT_SET",
      "visible": true,
    },
    "reactions": [],
    "type": "COMPONENT",
    "variantProperties": {},
    "visible": true,
  },
  "tree": {
    "children": [],
    "component": "Box",
    "nodeName": "Default",
    "nodeType": "COMPONENT",
    "props": {
      "aspectRatio": undefined,
      "flex": undefined,
      "h": undefined,
      "maxH": undefined,
      "maxW": undefined,
      "minH": undefined,
      "minW": undefined,
      "w": undefined,
    },
  },
  "variantComments": {},
  "variants": {},
}
