fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-138-9cccfcb552.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export interface IconButtonProps {
  size: 'sm' | 'md' | 'lg'
  leftIcon: React.ReactNode
}

export function IconButton({ size, leftIcon }: IconButtonProps) {
  return (
    <Box>
      {leftIcon}
      <Text
        boxSize="100%"
        color="#F00"
        fontFamily="Arial"
        fontSize="16px"
        fontWeight="400"
        letterSpacing="0px"
        lineHeight="1.5px"
        overflow="hidden"
        textOverflow="ellipsis"
      >
        Click
      </Text>
    </Box>
  )
}"
