fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-139-63f7b1f175.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Icon() {
  return <Box boxSize="100%" />
}"
