fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-142-ac82229282.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function CurriculumSubTitle() {
  return <Box boxSize="100%" />
}"
