fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-145-f7001b5648.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function ArrowIcon() {
  return <Box boxSize="100%" />
}"
